--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,2 @@
-spring.application.name=limits-service
-server.port=8081
-
-limits-service.min = 10
-limits-service.max = 9999
+limits-service.minimum = 8 
+limits-service.maximum = 5858
